# battleships_rust

./: Cargo.toml  README.md  Trunk.toml  index.html  styles.css
src/: game.rs  gui.rs  main.rs  storage.rs
src/game/: rand.rs  ship.rs
