[package]
name = "battleships"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.9.0"
gloo-console = "0.2.3"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Storage"] }
yew = { version = "0.20.0", features = ["csr"] }

